* Ensure no errors are raised when limiting with tags which are not in the feature set (#464 Joseph Wilk)
* Missing Romanian keywords added for Examples, Scenario Outline and Background (to my best google translate knowledge) (Aslak Hellesøy)
* Make rerun and --drb work together again after formatter API changes (#485 Erik Hansson, John Ferlito)

=== New Features
* Added 'but' variants to Japanese. (Kakutani Shintaro)
* README.txt explains people how to run all tests. Install gems with geminstaller. (Aslak Hellesøy)
* Added support for Serbian language, both Cyrillic and Latin with usage examples. (Dejan Dimic)
* Add new 'debug' formatter for debugging and visualising the calls to listeners. (Matt Wynne)

=== Changed features
* Use http://github.com/aslakhellesoy/wac instead of http://github.com/aslakhellesoy/ansicolor on Windows/JRuby (#456 Aslak Hellesøy)

=== Internal changes
* Added StepMother#invoke(step_name, multiline_argument=nil) - needed by cuke4duke ticket #26 (Aslak Hellesøy)
* StepDefinitionMethods is gone.

== 0.4.0 2009-10-09

The back to stable release. When we went from 0.3.11 to 0.3.90 we thought we were close to a 0.4.0 release. Then the community
went nuts and a lot of great contributions came in. Some of those broke backwards compatibility, and we decided it would be
better to do this while still on 0.3.x.

Rails users: you *must* run script/generate cucumber after installing this version.

If something breaks for you, please please please read this file carefully. It's most likely something referenced here, and
that will give you more information so you can solve any problems. If not, just get in touch on IRC or the Google Group.

=== New Features
* Total feature parsing time is shown when run with --verbose. Useful for benchmarking with future Ragel parser (Aslak Hellesøy)
* Tables yielded to step definitions are no longer frozen, so you can edit their data without #dup'ing (Aslak Hellesøy)