@@ -37,27 +37,70 @@ class CucumberGenerator < Rails::Generator::Base
   end
 
   def framework
-    options[:framework] || :rspec
+    options[:framework] ||= detect_default_framework!
   end
-  
+
   def spork?
     options[:spork]
   end
 
 protected
 
+  def detect_default_framework!
+    require 'rubygems'
+    rspec! || testunit!
+    raise "I don't know what test framework you want. Use --rspec or --testunit, or gem install rspec or test-unit." unless @default_framework
+    @default_framework
+  end
+
+  def rspec!
+    begin
+      require 'spec'
+      @default_framework = :rspec
+    rescue LoadError
+      false
+    end
+  end
+
+  def testunit!
+    begin
+      require 'test/unit'
+      @default_framework = :testunit
+    rescue LoadError
+      false
+    end
+  end
+
   def banner
     "Usage: #{$0} cucumber"
+  end
+
+  def after_generate
+    if @default_framework
+      puts <<-WARNING
+
+(::) (::) (::) (::) (::) (::) (::) (::) (::) (::) (::) (::) (::) (::) (::) 
+
+          (::)   T E S T   F R A M E W O R K   A L E R T    (::)
+
+You didn't explicitly generate with --rspec or --testunit, so I looked at
+your gems and saw that you had #{@default_framework} installed, so I went with that. 
+If you want something else, be specific about it. Otherwise, relax.
+
+(::) (::) (::) (::) (::) (::) (::) (::) (::) (::) (::) (::) (::) (::) (::) 
+
+WARNING
+    end
   end
 
   def add_options!(opt)
     opt.separator ''
     opt.separator 'Options:'
-    opt.on('--rspec', 'Setup cucumber for use with RSpec (default)') do |value|
+    opt.on('--rspec', "Setup cucumber for use with RSpec") do |value|
       options[:framework] = :rspec
     end
 
-    opt.on('--testunit', 'Setup cucumber for use with test/unit') do |value|
+    opt.on('--testunit', "Setup cucumber for use with test/unit") do |value|
       options[:framework] = :testunit
     end
 
